# swarms-memory

./: .env.examples  .gitignore  LICENSE  MIGRATION.md  README.md  chroma_swarms.py  faiss_swarms.py  pinecome_wrapper_example.py  pinecone_swarms.py  pyproject.toml  requirements.txt  simple_test.py  test.md  zyphra_rag_swarms.py
.github/workflows/: code_quality_control.yml  cos_integration.yml  docs.yml  docs_test.yml  lints.yml  pr_request_checks.yml  quality.yml  ruff.yml  run_test.yml  testing.yml  unit-test.yml  welcome.yml
agent_workspace/: ExampleCreator_state.json
examples/: action_subtask_example.py  base_db_example.py  base_vectordb_example.py  chroma_db.py  chroma_db_wrapper_example.py  dict_internal_memory_example.py  dict_shared_memory_example.py  faiss_example.py  faiss_wrapper_example.py  milvus_cloud_example.py  milvus_lite_example.py  pg_example.py  pinecome_wrapper_example.py  pinecone_wrapper_example.py  qdrant_example.py  qdrant_wrapper_example.py  short_term_memory_example.py  singlestore_wrapper_example.py  sqlite_example.py  unified_agent_memory_example.py  visual_memory_example.py  weaviate_cloud_example.py  weaviate_local_example.py
examples/vds_with_swarms/: chroma_swarms.py  faiss_swarms.py  milvus_cloud_swarms.py  milvus_lite_swarms.py  pinecone_swarms.py  qdrant_swarms.py  singlestore_swarms.py  weaviate_cloud_swarms.py  weaviate_local_swarms.py  zyphra_rag_swarms.py
scripts/: example_creator.py
server/: Dockerfile  api.py  collab.ipynb  requirements.txt
swarms_memory/: __init__.py  chroma_db_wrapper.py  exceptions.py  pinecone_wrapper.py
swarms_memory/dbs/: __init__.py  pg.py  pinecone.py  sqlite.py
swarms_memory/embeddings/: __init__.py  embedding_utils.py  litellm_embeddings.py
swarms_memory/memory/: singlestore.md
swarms_memory/utils/: __init__.py  short_term_memory.py
swarms_memory/vector_dbs/: __init__.py  base_vectordb.py  chroma_db_wrapper.py  faiss_wrapper.py  milvus_wrapper.py  pinecone_wrapper.py  qdrant_wrapper.py  singlestore_wrapper.py  weaviate_wrapper.py  zyphra_rag.py
tests/: test_api.py  test_chromadb.py  test_pinecone.py
tests/utils/: test_dictinternalmemory.py  test_dictsharedmemory.py  test_langchainchromavectormemory.py  test_pinecone.py  test_pq_db.py  test_short_term_memory.py  test_sqlite.py
tests/vector_dbs/: test_chromadb.py  test_faiss_wrapper.py  test_milvus_wrapper.py  test_pinecone.py  test_qdrant.py  test_qdrant_wrapper.py  test_singlestore.py  test_weaviate.py  test_zyphra_rag.py
