[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "swarms-memory"
version = "0.1.3"
description = "Swarms Memory - Pytorch"
license = "MIT"
authors = ["Kye Gomez <kye@apac.ai>"]
homepage = "https://github.com/kyegomez/swarms-memory"
documentation = "https://github.com/kyegomez/swarms-memory"
readme = "README.md"  # Assuming you have a README.md
repository = "https://github.com/kyegomez/swarms-memory"
keywords = ["artificial intelligence", "deep learning", "optimizers", "Prompt Engineering"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12"
]

[tool.poetry.dependencies]
python = "^3.10"
torch = "*"
chromadb = "*"
loguru = "*"
sentence-transformers = "*"
pinecone = "^3.0.0"
faiss-cpu = "*"
pydantic = "*"
sqlalchemy = "*"
singlestoredb = "*"
qdrant-client = "^1.7.0"
fastembed = "*"
litellm = "^1.0.0"
python-dotenv = "^1.0.0"
swarms = {version = "*", optional = true}




[tool.poetry.group.lint.dependencies]
ruff = ">=0.4.8,<0.13.0"
types-toml = "^0.10.8.1"
types-redis = "^4.3.21.6"
types-pytz = "^2024.1.0.20240417"
black = "^24.4.2"
types-chardet = "^5.0.4.6"
mypy-protobuf = "^3.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"
pytest-asyncio = "^0.21.0"
pytest-cov = "^4.0.0"

[tool.poetry.extras]
agents = ["swarms"]
grpc = ["pinecone[grpc]"]
asyncio = ["pinecone[asyncio]"]


[tool.autopep8]
max_line_length = 80
ignore = "E501,W6"  # or ["E501", "W6"]
in-place = true
recursive = true
aggressive = 3


[tool.ruff]
line-length = 70

[tool.black]
line-length = 70
target-version = ['py38']
preview = true
